chore(configs): use debug sample limits in stage1 config

--- a/configs/dlora/sft_stage1_softce_w1.yaml
+++ b/configs/dlora/sft_stage1_softce_w1.yaml
@@ -12,7 +12,7 @@ training:
   output_dir: ./output/1-15/stage1_softce_w1
   run_name: stage1-softce_w1-LRs-2e-5_2e-5_5e-5
   logging_dir: ./tb/1-15/stage1_softce_w1
-  num_train_epochs: 1
+  num_train_epochs: 4
   per_device_train_batch_size: 1
   per_device_eval_batch_size: 1
   effective_batch_size: 32
@@ -47,5 +47,6 @@ custom:
 
 debug:
   enabled: true
-  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train_tiny.coord.jsonl
-  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val_tiny.coord.jsonl
+  output_dir: ./output_debug/
+  train_sample_limit: 256
+  val_sample_limit: 128
