--- a/configs/tests/packed_tiny.yaml
+++ b/configs/tests/packed_tiny.yaml
@@ -32,7 +32,7 @@ data:
 custom:
   train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.jsonl
   val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.jsonl
-  sample_limit: 512
+  train_sample_limit: 512
   val_sample_limit: 128
   coord_tokens:
     enabled: true            # emit <|coord_*|> tokens in JSONL and template
