--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -68,8 +68,8 @@ custom:
   json_format: standard
   # Coord space: pre-normalized JSONLs; no runtime normalization
   emit_norm: none
-  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.jsonl
-  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.jsonl
+  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.filtered_max100_dense50_u3_t095.jsonl
+  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.filtered_max100_dense50_u3_t095.jsonl
   dump_conversation_path: output/conversation_text.txt
 
 debug:
