--- a/configs/dlora/sft_coord_init.yaml
+++ b/configs/dlora/sft_coord_init.yaml
@@ -29,8 +29,8 @@ training:
 
 
 custom:
-  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.coord.jsonl
-  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.coord.jsonl
+  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.filtered_max100_dense50_u3_t095.coord.jsonl
+  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.filtered_max100_dense50_u3_t095.coord.jsonl
   coord_offset:
     enabled: true
     ids: { start: 151670, end: 152669 }  # excludes 151669 internally
