--- a/configs/dlora/stage2_rollout_matching_ckpt3106.yaml
+++ b/configs/dlora/stage2_rollout_matching_ckpt3106.yaml
@@ -1,8 +1,9 @@
 extends: sft_base.yaml
 
-# Stage_2 rollout-matching (production-style defaults) starting from ckpt-3106.
+# Stage_2 rollout-matching with buffered rollouts (production-style defaults) starting from ckpt-3106.
 #
-# This file is meant to be "ready for production" (real dataset, long max length, vLLM rollouts configured).
+# This file is meant to be "ready for production" with buffered rollouts (E-step generate once, M-step reuse).
+# Uses real dataset, long max length, vLLM rollouts configured with monitoring optimizations.
 # For a quick smoke on a handful of real samples, use:
 #   configs/dlora/smoke_stage2_rollout_matching_ckpt3106.yaml
 
@@ -10,37 +11,64 @@ extends: sft_base.yaml
 global_max_length: 16000
 
 tuner:
-  # NOTE: We keep vLLM LoRA disabled for multimodal stability and instead sync
-  # merged weights into vLLM (GRPO-style). DoRA/LoRA details here only affect
-  # training; vLLM rollouts always see merged weights.
-  use_dora: false
-  # vLLM rollouts only see the LLM; avoid LoRA on vision modules for compatibility.
-  target_modules: [q_proj, k_proj, v_proj, o_proj, gate_proj, up_proj, down_proj]
+  # DoRA ("dlora"): restrict LoRA injection to:
+  # - last 8 LLM blocks (layers 28-35 for Qwen3-VL-8B, 36 layers total)
+  # - all MLP aligner modules (visual merger + deepstack mergers)
+  train_type: lora
+  use_dora: true
+  freeze_llm: false
+  freeze_vit: true
+  freeze_aligner: false
+  target_modules: [all-linear]
+  # NOTE: PEFT uses `re.fullmatch` when `target_modules` is a regex string.
+  # Keep this regex *precise* (Linear-only) to avoid matching LayerNorm/containers, which PEFT cannot wrap with LoRA.
+  # Keep this as a SINGLE LINE (no YAML folding), otherwise whitespace becomes part of the regex and LoRA/DoRA can
+  # silently match nothing.
+  #
+  # Matches:
+  # - LLM layers 28-35: {q,k,v,o}_proj + {gate,up,down}_proj
+  # - Aligner MLPs: visual.merger + deepstack_merger_list.{0,1,2} linear_fc{1,2}
+  target_regex: '^(model\.visual\.merger\.(linear_fc1|linear_fc2)|model\.visual\.deepstack_merger_list\.(0|1|2)\.(linear_fc1|linear_fc2)|model\.language_model\.layers\.(2[8-9]|3[0-5])\.(self_attn\.(q_proj|k_proj|v_proj|o_proj)|mlp\.(gate_proj|up_proj|down_proj)))$'
 
 model:
   # Use absolute path to avoid hub fallback if cwd differs across launchers/ranks.
-  model: /data/home/xiaoyan/AIteam/data/CoordExp/output/12-24/coord_loss-merged/ckpt-3106
+  model: output/12-24/coord_loss-merged/ckpt-3106
+  # SDPA is more robust for long-context monitoring runs.
+  attn_impl: flash_attention_2
 
 training:
-  output_dir: ./output/rollout_matching_sft/stage2_ckpt3106
-  run_name: stage2_rollout_matching_ckpt3106
-  logging_dir: ./tb/rollout_matching_sft/stage2_ckpt3106
+  output_dir: output/rollout_matching_sft/stage2_ckpt3106_buffered
+  run_name: debug
+  logging_dir: tb/rollout_matching_sft/stage2_ckpt3106_buffered
 
   # Sensible starting point; tune for real runs.
   num_train_epochs: 4
   # Rollout-matching is rollout-heavy; keep per-device small for stability on long sequences.
   per_device_train_batch_size: 1
   per_device_eval_batch_size: 1
-  # On 4xA100 this yields grad_acc=3 (more stable than grad_acc=1 at long lengths).
-  effective_batch_size: 12
+  # On 4xA100 this yields grad_acc=16 (more stable than grad_acc=1 at long lengths).
+  effective_batch_size: 32
+
+  # Dense per-step logging for rollout metrics (match_rate, truncation, packing fill, etc.).
+  logging_steps: 1
+  logging_first_step: true
+
+  # For buffered rollouts, prefer full windows only.
+  dataloader_drop_last: true
 
   # Rollout-matching already logs core rollout metrics during training; disable eval by default.
-  eval_strategy: "no"
+  eval_strategy: steps
+  eval_steps: 1
   # Save periodically (no eval dependency).
   save_strategy: steps
   save_steps: 80
   save_total_limit: 2
   save_delay_steps: 200
+
+  # Rollout-matching eval runs full rollout->parse->Hungarian-match, so use a
+  # detection-like metric as best-model monitor.
+  metric_for_best_model: eval_rollout_f1
+  greater_is_better: true
 
   optimizer: multimodal
   learning_rate: 2.0e-5
@@ -50,33 +78,43 @@ training:
 
   # Stage_2 supports post-rollout packing inside the trainer only.
   packing: true
-  packing_buffer: 256
+  packing_buffer: 512
   packing_min_fill_ratio: 0.7
   packing_drop_last: true
   # eval_packing is ignored for rollout-matching (trainer handles collation).
-  eval_packing: false
+  eval_packing: true
 
 custom:
   trainer_variant: rollout_matching_sft
 
   # Real LVIS coord-token dataset (update paths if needed).
-  train_jsonl: /data/home/xiaoyan/AIteam/data/CoordExp/public_data/lvis/rescale_32_768_poly_20/train.filtered_max100_dense50_u3_t095.coord.jsonl
-  val_jsonl: /data/home/xiaoyan/AIteam/data/CoordExp/public_data/lvis/rescale_32_768_poly_20/val.filtered_max100_dense50_u3_t095.coord.jsonl
+  train_jsonl: public_data/lvis/rescale_32_768_poly_20/train.filtered_max100_dense50_u3_t095.coord.jsonl
+  val_jsonl: public_data/lvis/rescale_32_768_poly_20/val.filtered_max100_dense50_u3_t095.coord.jsonl
+
+  # Limit samples for monitoring runs.
+  train_sample_limit: 32
+  val_sample_limit: 16
 
   extra:
     rollout_matching:
       # Default: vLLM colocate rollouts (teacher-forced forward/backprop stays on the training model).
+      # For monitoring/debugging, you can switch to HF backend: rollout_backend: hf
       rollout_backend: vllm
-      rollout_generate_batch_size: 2
+      rollout_generate_batch_size: 1
+
+      # Buffered rollouts for efficiency (reuse one rollout window across multiple optimizer steps)
+      rollout_buffer:
+        enabled: true
+        # Reuse one rollout window across 4 optimizer steps (1x E-step + 3x M-steps)
+        m_steps: 4
 
       # REQUIRED for vLLM rollouts (colocate). Must cover prompt_len + max_new_tokens.
       vllm:
         tensor_parallel_size: 4
-        # Keep this low to leave headroom for the training process.
-        gpu_memory_utilization: 0.45
+        # Keep this modest to leave headroom for the training model on the same GPU.
+        gpu_memory_utilization: 0.50
         # Chunk TP-group gathered requests to reduce peak multimodal prefill VRAM in colocate mode.
-        # Increase this (or remove) after you have verified memory stability.
-        infer_batch_size: 1
+        infer_batch_size: 4
         # Must cover prompt_len + max_new_tokens (vLLM requirement).
         #
         # With max_model_len=16000 and max_new_tokens=8192, your prompt_len must be <= 7808,
@@ -103,6 +141,7 @@ custom:
         # vLLM internal scheduling knobs. These do NOT change the model context length, but can
         # affect whether vLLM LoRA kernels have enough token budget during profile/run.
         # Keep max_num_seqs close to rollout_generate_batch_size for lower memory overhead.
+        # For monitoring runs, you can use: max_num_seqs: 4
         max_num_seqs: 4
         # Must be >= the maximum token count seen by any LoRA-wrapped linear op
         # (can include vision tokens). Keeping this close to max_model_len
@@ -125,17 +164,18 @@ custom:
 
       # HF-only safety guard: if a rollout degenerates into repetitive garbage, force EOS early
       # instead of burning minutes until max_new_tokens. (vLLM currently ignores this hook.)
+      # More aggressive termination for monitoring runs: avoid spending minutes on
+      # degenerate rollouts that will be truncated/invalid anyway.
       repeat_terminate:
         enabled: true
-        # Only activate after the rollout is already "long enough" so normal short answers are unaffected.
-        min_new_tokens: 1024
+        min_new_tokens: 256
         # Stop trivial loops like "...." or repeating a special token forever.
-        max_consecutive_token_repeats: 64
+        max_consecutive_token_repeats: 32
         # Stop when the model repeats the exact same n-gram back-to-back.
-        ngram_size: 64
+        ngram_size: 32
         ngram_repeats: 2
         # Optional hard cap to prevent runaway "object_k" spam (LVIS GT is capped to 100).
-        max_object_keys: 256
+        max_object_keys: 128
 
       candidate_top_k: 5
       maskiou_gate: 0.3
